2002-04-25  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	revert 2002-04-24, which was not needed (sscanf don't need
	precision).

2002-04-24  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	In order for the printf() family function to put a limit to 
	the len of a copied string, a precision have to be given
	(%255s is not valid, %.255s is).

2002-04-12  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (read_logfile): 
	(file_server_wake_up): 

	stop using fgets to read the logfile: we now use getc_unlocked,
	and handle fine the case where :

	- the buffer is too small.
	- we meet EOF before meeting EOL.

	which avoid us being desynchronized. The read buffer is now
	per file monitor.
	
2002-04-08  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c: try to do time consuming stuff
	at initialisation time.

	* src/regex.c: 
	instead of searching at runtime for the plugin to use
	(using string compareason), resolve plugin dependency
	at initialisation time, and store a pointer to the plugin
	that need to be ran for a given regex.

	(regex_exec): the callback now take the plugin as argument.

	(regex_init): call regex_create_entry instead of doing
	everything ourselve.
	
	(regex_create_entry): new function.
	

	* src/log-plugins.c: 
	we do not use hashkey anymore.

	(log_plugin_run): take the plugin to run as argument.
	It's now up to the caller to know which plugin to run.

	* src/hashkey.c: removed.

	* Makefile.am (install-data-local): 
        Only install default configuration file if it does not
        exit... If a configuration file is already present, warn
        the user and install in prelude-lml.conf-dist.

2002-04-05  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* src/lml-alert.c: include <inttypes.h> and <sys/types.h>
	(FreeBSD compat. fix)

2002-04-04  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
