@@ -1,3 +1,14 @@
+2002-04-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* plugins/simple/simple.c (parse_ruleset): 
+	strip out \n.
+	
+	(parse_rule): handle include rule.
+
+	(parse_include): new function, parse include rule.
+	If the path is not absolute, then we append the current
+	rulesetdir to this filename.
+
 2002-04-25  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* src/log-common.c (format_syslog_header): 
